--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ html, body {
  margin: 0;
  padding: 0;
  height: 100%;
+ background: linear-gradient(to bottom,rgb(8, 2, 92), rgb(63, 2, 104), black);
  overflow: hidden ;
 }
 
@@ -11,8 +12,7 @@ html, body {
  display: flex;
  height: 100vh;
  max-width: 100vw;
-  max-height: 100vh;
- background: linear-gradient(to bottom,rgb(8, 2, 92), rgb(63, 2, 104), black);
+ max-height: 100vh;
  overflow: hidden;
 }
 
@@ -184,70 +184,94 @@ button:hover {
 
 /* RESPONSIVIDADE PARA CELULARES */
 @media screen and (max-width: 768px) {
+  html, body {
+    min-height:100vh;
+    overflow: auto;
+  }
+
   .container {
     flex-direction: column;
     height: auto;
     max-height: none;
   }
 
-  .left-side {
+  .left-side, .right-side {
     flex: none;
     width: 100%;
-    height: 200px;
-    padding: 1rem;
+    padding: 0;
   }
 
   .right-side {
-    flex: none;
-    width: 100%;
-    top: 0;
+    position: relative;
     transform: scale(1);
+    top: 0;
+    z-index: 10;
   }
 
   .image-wrapper {
-    border-radius: 0;
-    top: 0;
-    filter: none;
+    overflow: visible;
+    position:relative;
+    top: 0; 
+    z-index: 10 ;
   }
 
   .right-side img {
-    object-position: center;
+    object-fit: contain;
+    position: relative;
     height: auto;
-    max-height: 300px;
+    width: 100%;
+    object-position: center;
+    border-bottom-right-radius: 70% 100%;
+    opacity: 1;
+    filter: drop-shadow(0px 10px 15px rgba(0, 0, 0, 1));
+    z-index: 10;
   }
 
   .busca-container {
-    position: static;
-    width: 90%;
-    height: auto;
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 70%;
+    z-index: 1;
+    max-width: 400px;
+    margin: 20px 0 0 0;
     border-radius: 20px;
-    padding: 16px;
-    margin: 20px auto;
     border-bottom-right-radius: 20px;
-    filter: none;
-  }
-
-  .campo-busca-wrapper i {
-    top: 36px;
-  }
-
-  #campoBusca {
-    padding: 12px 10px 12px 35px;
-    font-size: 15px;
-  }
-
-  button {
-    font-size: 14px;
+    height: auto;
+    padding: 20px;
+    border-bottom-right-radius: 100% 59%;
+    border-bottom-left-radius: 1% 9%;
+    border-top-right-radius: 10% 10%;
+    border-top-left-radius: 10% 10%;
+    box-shadow: 0 0 20px rgba(0,0,0,0.4);
+    
   }
 
   #resultado {
-    margin-top: 10px;
-    font-size: 14px;
-    padding: 12px;
-    border-radius: 16px;
-    mask-image: none;
-    -webkit-mask-image: none;
-  }
+  min-height: 280px;
+  padding: 1rem;
+  border-bottom-right-radius: 100% 59%;
+  border-bottom-left-radius: 1% 9%;    border-top-right-radius: 10% 10%;
+  border-top-left-radius: 10% 10%;
+  border: none;    
+ }
 }
 
+  #particles-js {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 0;
+    pointer-events: none;
+  }
+
+  #particles-js canvas {
+    width: 100vw !important;
+    height: 100vh !important;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
 
