--- a/style.css
+++ b/style.css
@@ -1,4 +1,50 @@
 
+@import url(https://use.fontawesome.com/releases/v6.4.2/css/all.css);
+
+.codetheworld-io {
+  position: fixed; 
+  top: 95%; 
+  right: 970px; 
+  transform: translateY(-50%);
+  display: flex;
+  flex-direction: row;
+  gap: 20px; 
+  z-index: 999;
+}
+
+a {
+  margin: 0 10px;
+  border-radius: 50%;
+  box-sizing: border-box;
+  background: #fdfbfb;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  transition: 0.5s;
+  font-size: 1.6em;
+  background: var(--color);
+  color:#050801;
+  box-shadow: 0 0 5px var(--color),
+  0 0 25px var(--color),
+  0 0 50px var(--color),
+  0 0 200px var(--color);
+  -webkit-box-reflect: below 5px linear-gradient( to bottom, rgba(0, 0, 0, 0.0), rgba (0, 0, 0, 0.4));
+}
+
+a:hover {
+  filter: brightness(1.8);
+  transform: scale(1.15);
+}
+
+
+
+
+
+
+
 /* Background de fundo Left+Right */
 html, body {
  margin: 0;
@@ -231,7 +277,7 @@ button:hover {
   }
   
  .container {
-  filter: drop-shadow( -10px -20px 30px rgb(0, 0, 0, 1));
+  filter: drop-shadow( -10px -10px 30px rgb(0, 0, 0, 1));
   box-shadow: none;
   height:100%;      
   width: 110%;
@@ -245,7 +291,7 @@ button:hover {
     height:100%;
     width:100%;
     object-fit:cover; 
-    left: -90px;
+    object-position: 60% center;
 
   }
 
@@ -266,6 +312,53 @@ button:hover {
   -webkit-mask-image:none;
   border: none;
 }
+
+@import url(https://use.fontawesome.com/releases/v6.4.2/css/all.css);
+
+.codetheworld-io {
+  position: fixed; 
+  top: 50%; 
+  right: 5px; 
+  transform: translateY(-50%);
+  display: flex;
+  flex-direction: column;
+  gap: 20px; 
+  z-index: 999 !important;
+}
+
+a {
+  margin: 0 10px;
+  border-radius: 50%;
+  box-sizing: border-box;
+  background: #fdfbfb;
+  opacity: 0.7;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  transition: 0.5s;
+  font-size: 1.9em;
+  background: var(--color);
+  color:#050801;
+  -webkit-box-reflect: below 5px linear-gradient( to bottom, rgba(0, 0, 0, 0.0), rgba (0, 0, 0, 0.4));
+  box-shadow: 0 0 5px var(--color),
+  0 0 25px,
+  0 0 50px,
+  0 0 120px;
+}
+}
+
+a:hover {
+  filter: brightness(1.3);
+  transform: scale(1.15);
+  box-shadow: 0 0 5px var(--color),
+  0 0 25px var(--color),
+  0 0 50px var(--color),
+  0 0 200px var(--color);
+}
+
 
 }
 
