--- a/style.css
+++ b/style.css
@@ -2,14 +2,14 @@
 @import url(https://use.fontawesome.com/releases/v6.4.2/css/all.css);
 
 .codetheworld-io {
-  position: fixed; 
-  top: 95%; 
-  right: 970px; 
-  transform: translateY(-50%);
-  display: flex;
-  flex-direction: row;
-  gap: 20px; 
-  z-index: 999;
+   position: fixed;
+    top: 94%;
+    right: 74%;
+    transform: translateY(-50%);
+    display: flex;
+    flex-direction: row;
+    gap: 16px;
+    z-index: 9999;
 }
 
 a {
@@ -17,6 +17,7 @@ a {
   border-radius: 50%;
   box-sizing: border-box;
   background: #fdfbfb;
+  opacity: 0.7;
   width: 50px;
   height: 50px;
   display: flex;
@@ -24,25 +25,24 @@ a {
   align-items: center;
   text-decoration: none;
   transition: 0.5s;
-  font-size: 1.6em;
+  font-size: 1.9em;
   background: var(--color);
   color:#050801;
+  -webkit-box-reflect: below 5px linear-gradient( to bottom, rgba(0, 0, 0, 0.0), rgba (0, 0, 0, 0.4));
+  box-shadow: 0 0 5px var(--color),
+  0 0 25px,
+  0 0 50px,
+  0 0 120px;
+}
+
+a:hover {
+  filter: brightness(1.3);
+  transform: scale(1.15);
   box-shadow: 0 0 5px var(--color),
   0 0 25px var(--color),
   0 0 50px var(--color),
   0 0 200px var(--color);
-  -webkit-box-reflect: below 5px linear-gradient( to bottom, rgba(0, 0, 0, 0.0), rgba (0, 0, 0, 0.4));
 }
-
-a:hover {
-  filter: brightness(1.8);
-  transform: scale(1.15);
-}
-
-
-
-
-
 
 
 /* Background de fundo Left+Right */
@@ -316,12 +316,13 @@ button:hover {
   border: none;
 }
 
+/* Icones do wpp e fb */
 @import url(https://use.fontawesome.com/releases/v6.4.2/css/all.css);
 
 .codetheworld-io {
-  position: relative; 
-  top: 19%; 
-  right: -350px; 
+  position: fixed; 
+  top: 50%!important; 
+  right: 15px!important; 
   transform: translateY(-50%);
   display: flex;
   flex-direction: column;
