--- a/style.css
+++ b/style.css
@@ -275,7 +275,7 @@ button:hover {
     border-top-right-radius: 100% 40%;
     filter: none !important
   }
-  
+ 
  .container {
   max-width: 100%;
   height: auto;
@@ -294,8 +294,8 @@ button:hover {
     height: auto;
     max-width:100%;
     object-fit:cover; 
-    object-position: 60% center;
-
+    transform: translate(-50px);
+    
   }
 
    #resultado {
@@ -321,8 +321,8 @@ button:hover {
 
 .codetheworld-io {
   position: fixed; 
-  top: 50%!important; 
-  right: 15px!important; 
+  top: 52%!important; 
+  right: 0px!important; 
   transform: translateY(-50%);
   display: flex;
   flex-direction: column;
