--- a/style.css
+++ b/style.css
@@ -294,9 +294,16 @@ button:hover {
     height: auto;
     max-width:100%;
     object-fit:cover; 
-    transform: translate(-50px);
+    transform: translate(-70px);
     
   }
+
+  .image-wrapper {
+  overflow: hidden;
+  -webkit-mask-image: -webkit-radial-gradient(white, black); /* corrige vazamento no iOS */
+  mask-image: radial-gradient(circle at 100% 100%, black 80%, transparent 100%);
+}
+
 
    #resultado {
   flex-grow: 1;
@@ -320,9 +327,9 @@ button:hover {
 @import url(https://use.fontawesome.com/releases/v6.4.2/css/all.css);
 
 .codetheworld-io {
-  position: fixed; 
-  top: 52%!important; 
-  right: 0px!important; 
+  position: relative; 
+  top: 15%!important; 
+  right: -300px!important; 
   transform: translateY(-50%);
   display: flex;
   flex-direction: column;
@@ -336,14 +343,14 @@ a {
   box-sizing: border-box;
   background: #fdfbfb;
   opacity: 0.7;
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
   text-decoration: none;
   transition: 0.5s;
-  font-size: 1.9em;
+  font-size: 1.6em;
   background: var(--color);
   color:#050801;
   -webkit-box-reflect: below 5px linear-gradient( to bottom, rgba(0, 0, 0, 0.0), rgba (0, 0, 0, 0.4));
