--- a/style.css
+++ b/style.css
@@ -371,6 +371,7 @@ a:hover {
 @media screen and (min-device-width: 375px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
   .codetheworld-io {
     left: 83% !important; /* Ajuste fino só pro iOS */
+    top: 13%!important;
   }
 }
 
