--- a/style.css
+++ b/style.css
@@ -237,7 +237,7 @@ button:hover {
     flex-direction:column-reverse; 
     height:100vh;                
     margin:0;
-    overflow-x: hidden !important;
+    overflow: visible;
   }
 
    .right-side {
@@ -258,7 +258,7 @@ button:hover {
     overflow-y:auto; 
     z-index:10;
     border-bottom-right-radius: 100% 40%;
-    filter: drop-shadow(10px 20px 30px rgb(0, 0, 0, 1));
+    filter: drop-shadow(1px 20px 30px rgb(0, 0, 0, 1));
     overflow: hidden;
   }
 
