--- a/style.css
+++ b/style.css
@@ -237,7 +237,7 @@ button:hover {
     flex-direction:column-reverse; 
     height:100vh;                
     margin:0;
-    overflow: visible;
+    overflow-x: hidden !important;
   }
 
    .right-side {
@@ -368,5 +368,21 @@ a:hover {
   0 0 200px var(--color);
 }
 
+/* particles */
+#particles-js {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  pointer-events: none;
+}
 
+/* Reset básico */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
