--- a/style.css
+++ b/style.css
@@ -370,20 +370,14 @@ a:hover {
 
 /* particles */
 #particles-js {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 4;
+  width: 100vw;
+  height: 100vw;
+  z-index: 0;
   pointer-events: none;
 
 }
 
-/* Reset básico */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
 
