--- a/style.css
+++ b/style.css
@@ -237,7 +237,7 @@ button:hover {
     flex-direction:column-reverse; 
     height:100vh;                
     margin:0;
-    overflow-x: hidden !important;
+    overflow:visible;
   }
 
    .right-side {
@@ -373,8 +373,8 @@ a:hover {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vw;
+  width: 100%;
+  height: 100%;
   z-index: 0;
   pointer-events: none;
 
